@@ -1001,41 +1001,41 @@ typedef cob_s64_t cob_flags_t;
 
 /* Report attribute defines */
 
-#define COB_REPORT_LINE			(1 << 0)
-#define COB_REPORT_LINE_PLUS		(1 << 1)
-#define COB_REPORT_COLUMN_PLUS		(1 << 2)
-#define COB_REPORT_RESET_FINAL		(1 << 3)
-#define COB_REPORT_HEADING		(1 << 4)
-#define COB_REPORT_FOOTING		(1 << 5)
-#define COB_REPORT_PAGE_HEADING		(1 << 6)
-#define COB_REPORT_PAGE_FOOTING		(1 << 7)
-#define COB_REPORT_CONTROL_HEADING	(1 << 8)
-#define COB_REPORT_CONTROL_HEADING_FINAL (1 << 9)
-#define COB_REPORT_CONTROL_FOOTING	(1 << 10)
-#define COB_REPORT_CONTROL_FOOTING_FINAL (1 << 11)
-#define COB_REPORT_DETAIL		(1 << 12)
-#define COB_REPORT_NEXT_GROUP_LINE	(1 << 13)
-#define COB_REPORT_NEXT_GROUP_PLUS	(1 << 14)
-#define COB_REPORT_NEXT_GROUP_PAGE	(1 << 15)
-#define COB_REPORT_LINE_NEXT_PAGE	(1 << 16)
-#define COB_REPORT_NEXT_PAGE		(1 << 17)
-#define COB_REPORT_GROUP_INDICATE	(1 << 18)
-#define COB_REPORT_GROUP_ITEM		(1 << 19)
-#define COB_REPORT_HAD_WHEN		(1 << 20)
-#define COB_REPORT_COLUMN_LEFT		(1 << 21)
-#define COB_REPORT_COLUMN_CENTER	(1 << 22)
-#define COB_REPORT_COLUMN_RIGHT		(1 << 23)
-#define COB_REPORT_PRESENT		(1 << 24)
-#define COB_REPORT_BEFORE		(1 << 25)
-#define COB_REPORT_PAGE			(1 << 26)
-#define COB_REPORT_ALL			(1 << 27)
+#define COB_REPORT_LINE			(1U << 0)
+#define COB_REPORT_LINE_PLUS		(1U << 1)
+#define COB_REPORT_COLUMN_PLUS		(1U << 2)
+#define COB_REPORT_RESET_FINAL		(1U << 3)
+#define COB_REPORT_HEADING		(1U << 4)
+#define COB_REPORT_FOOTING		(1U << 5)
+#define COB_REPORT_PAGE_HEADING		(1U << 6)
+#define COB_REPORT_PAGE_FOOTING		(1U << 7)
+#define COB_REPORT_CONTROL_HEADING	(1U << 8)
+#define COB_REPORT_CONTROL_HEADING_FINAL (1U << 9)
+#define COB_REPORT_CONTROL_FOOTING	(1U << 10)
+#define COB_REPORT_CONTROL_FOOTING_FINAL (1U << 11)
+#define COB_REPORT_DETAIL		(1U << 12)
+#define COB_REPORT_NEXT_GROUP_LINE	(1U << 13)
+#define COB_REPORT_NEXT_GROUP_PLUS	(1U << 14)
+#define COB_REPORT_NEXT_GROUP_PAGE	(1U << 15)
+#define COB_REPORT_LINE_NEXT_PAGE	(1U << 16)
+#define COB_REPORT_NEXT_PAGE		(1U << 17)
+#define COB_REPORT_GROUP_INDICATE	(1U << 18)
+#define COB_REPORT_GROUP_ITEM		(1U << 19)
+#define COB_REPORT_HAD_WHEN		(1U << 20)
+#define COB_REPORT_COLUMN_LEFT		(1U << 21)
+#define COB_REPORT_COLUMN_CENTER	(1U << 22)
+#define COB_REPORT_COLUMN_RIGHT		(1U << 23)
+#define COB_REPORT_PRESENT		(1U << 24)
+#define COB_REPORT_BEFORE		(1U << 25)
+#define COB_REPORT_PAGE			(1U << 26)
+#define COB_REPORT_ALL			(1U << 27)
 
-#define COB_REPORT_NEGATE		(1 << 28)	/* Negative: so ABSENT == PRESENT & NEGATE */
+#define COB_REPORT_NEGATE		(1U << 28)	/* Negative: so ABSENT == PRESENT & NEGATE */
 
-#define COB_REPORT_SUM_EMITED		(1 << 29)
-#define COB_REPORT_LINE_EMITED		(1 << 30)
-#define COB_REPORT_REF_EMITED		(1 << 31)
-#define COB_REPORT_EMITED		(COB_REPORT_REF_EMITED|COB_REPORT_LINE_EMITED|COB_REPORT_SUM_EMITED)
+#define COB_REPORT_SUM_EMITTED		(1U << 29)
+#define COB_REPORT_LINE_EMITTED		(1U << 30)
+#define COB_REPORT_REF_EMITTED		(1U << 31)
+#define COB_REPORT_EMITTED		(COB_REPORT_REF_EMITTED | COB_REPORT_LINE_EMITTED | COB_REPORT_SUM_EMITTED)
 
 /* End Report attribute defines */
 
